--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Stefany Livaque",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sync": "^0.2.5"
   }
 }
